# AOA_Prototype

./: README.md
AOA_Prototype/: CMakeLists.txt  FirstPage.qml  Main.qml  Theme.qml  main.cpp
AOA_Prototype/components/: CustomButton.qml  CustomButton2.qml  CustomButtonStartStop.qml  CustomImage.qml  CustomLable.qml  CustomLableButtonsGroup.qml  qmldir
AOA_Prototype/qmlTests/: tst_custoButton.qml
AOA_Prototype/src/: backend.cpp  backend.h
AOA_Prototype/tests/: qml_tst_runner.cpp
AOA_Prototype/theme/: Theme.qml  qmldir
